# e4gamma

./: .gitignore  CMakeLists.txt  E4Gamma.sln  GLSkinnedMesh.h  e4gamma.sln  makefile
Data/.svn/: all-wcprops  entries
Data/Blender/: head.blend  head.blend1  icosphere.blend  icosphere.blend1  icosphere.blend2  level.blend2  shadowtest.blend  shadowtest.blend1  shadowtest.blend2
Data/Materials/: ambientonly.material  phong.material  test.material
Data/Meshes/: TestMesh.mesh  icosphere.mesh  plane.mesh  shadowtest.mesh  x.mesh
Data/Models/: test.model
Data/Shaders/: ambientonly.fsh  ambientonly.spr  ambientonly.vsh  depthonly.fsh  phong.fsh  phong.vsh  simplephong.fsh  test.fsh  test.spr
Data/Textures/: White.rgba  levelcolour.rgba  levelnrm.rgba
E4Gamma/: E4Gamma.csproj  Primitives.cs  Quaternion.cpp  Quaternion.h  Vector.cpp  Vector.h
E4Gamma.AI/: E4Gamma.AI.csproj
E4Gamma.AI/Properties/: AssemblyInfo.cs
E4Gamma.Collision/: E4Gamma.Collision.csproj
E4Gamma.Collision/Properties/: AssemblyInfo.cs
E4Gamma.Physics/: E4Gamma.Physics.csproj
E4Gamma.Physics/Properties/: AssemblyInfo.cs
E4Gamma.xcodeproj/: project.pbxproj
E4Gamma.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
E4Gamma/Properties/: AssemblyInfo.cs
Include/Core/: Core.h
Include/GL/: GLCamera.h  GLFrameBuffer.h  GLIncludes.h  GLLight.h  GLMaterial.h  GLMesh.h  GLModel.h  GLRenderContext.h  GLRenderer.h  GLShader.h  GLShaderProgram.h  GLTexture.h
Include/Math/: Matrix.h  Quaternion.h  Vector.h
Include/Physics/: Euler.h  PhysicsFrame.h  (+2 more)
Tests/: TestGLRenderer.cpp
(+194 files in other folders)
